# cezzis-com-cloudsync-api

./: Dockerfile  README.md  makefile  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task-template.md  user-story-template.md
.github/workflows/: cezzis-cloudsync-api-cicd.yaml
.iac/argocd/: cezzis-com-cloudsync-api-cloudsync.yaml  cezzis-com-cloudsync-api-loc.yaml  cezzis-com-cloudsync-api.yaml  image-updater-cloudsync.yaml  image-updater-loc.yaml  image-updater.yaml
.iac/dapr/docker-loc/: bindings-idp-account-email-sync-queue.yaml  dapr-config.yaml  env-secrets.json  pubsub-cocktail-updates-sync-topic.yaml  pubsub-cocktail-updates-topic.yaml  pubsub-deadletter-topic.yaml  pubsub-sync-deadletter-topic.yaml  resiliency.yaml  secret-store.yaml
.iac/dapr/docker-prd/: bindings-cocktail-updates-queue.yaml  bindings-idp-account-email-sync-queue.yaml  dapr-config.yaml  env-secrets.json  pubsub-account-updates-topic.yaml
.iac/dapr/k8s-dep-cloudsync/: bindings-cocktail-updates-azure-queue.yaml  bindings-cocktail-updates-azure-scheduled-queue.yaml  bindings-cocktail-updates-scheduled-queue.yaml  dapr-config.yaml  kustomization.yaml  pubsub-cloud-sync-azure-topic.yaml  pubsub-cocktail-updates-schedule-topic.yaml  pubsub-cocktail-updates-sync-topic.yaml  resiliency.yaml
.iac/dapr/k8s-dep-loc/: bindings-cocktail-updates-queue.yaml  bindings-cocktail-updates-scheduled-queue.yaml  dapr-config.yaml  kustomization.yaml  pubsub-cloud-sync-topic.yaml  pubsub-cocktail-updates-sync-topic.yaml  pubsub-sync-deadletter-topic.yaml  resiliency.yaml
.iac/dapr/k8s-dev-loc/: bindings-cocktail-updates-queue.yaml  bindings-cocktail-updates-scheduled-queue.yaml  dapr-config.yaml  pubsub-cloud-sync-topic.yaml  pubsub-cocktail-updates-schedule-topic.yaml  pubsub-cocktail-updates-sync-topic.yaml  pubsub-sync-deadletter-topic.yaml  resiliency.yaml  secret-store.yaml
.iac/k8s/: configmap.yml  deployment.yml  external-secrets.yml  kustomization.yaml  service.yml
.iac/k8s-cloudsync/: configmap.yml  deployment.yml  external-secrets.yml  kustomization.yaml  service.yml
.iac/k8s-loc/: configmap.yml  deployment.yml  external-secrets.yml  kustomization.yaml  service.yml
.iac/terraform/: datasources.tf  keyvault.tf  servicebus-onprem.tf  servicebus.tf  variables.tf
src/cezzis_com_cloudsync_api/: .env  app_module.py  main.py
(+85 files in other folders)
